--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
 <body>
     <ul id="messages"></ul>
+    
+    <span id="typing-message"></span>
     <form id="form" action="">
         <input id="input" autocomplete="off" /><button>Send</button>
     </form>
@@ -71,45 +73,65 @@
 <script src="/socket.io/socket.io.js"></script>
 
 <script>
-
-    document.addEventListener('DOMContentLoaded', () => {
-
-        const userInput = window.prompt('Enter your name:');
-
-
-    });
-
     var socket = io();
+    var userInput
 
     var messages = document.getElementById('messages');
     var form = document.getElementById('form');
     var input = document.getElementById('input');
+    var typingMessage = document.getElementById('typing-message');
 
-    form.addEventListener('submit', function (e) {
+
+    document.addEventListener('DOMContentLoaded', () => {
+        userInput = window.prompt('Enter your name:');
+        console.log(userInput);
+    });
+
+
+    input.addEventListener('input', () => {
+        socket.emit('typing', userInput);
+    });
+
+    form.addEventListener('submit', (e) => {
         e.preventDefault();
         if (input.value) {
-            socket.emit('message', input.value);
+            const data = {
+                message: input.value,
+                name: userInput
+            }
+            socket.emit('message', data);
             input.value = '';
         }
     });
 
-    socket.on('message', function (msg) {
+    socket.on('message', (data) => {
 
-        var newItem = document.createElement('li');
-        newItem.textContent = msg;
-        messages.appendChild(newItem);
+        if (Array.isArray(data)) {
+            data.forEach(chat => {
 
-        msg.forEach(message => {
+                var newItem = document.createElement('li');
+                newItem.textContent = chat.name + ": " + chat.message;
+                messages.appendChild(newItem);
+                window.scrollTo(0, document.body.scrollHeight);
 
-            var item = document.createElement('li');
-            item.textContent = message;
-            messages.appendChild(item);
-
-        });
-
+            })
+        } else {
+            var newItem = document.createElement('li');
+            newItem.textContent = data.name + ": " + data.message;
+            messages.appendChild(newItem);
+        }
         window.scrollTo(0, document.body.scrollHeight);
-
     });
+
+    socket.on('typing', (userName) => {
+        typingMessage.textContent = userName + ' is typing...';
+        // Puedes agregar un temporizador para borrar el mensaje después de un tiempo
+        // Para que no se quede permanentemente en la pantalla
+        setTimeout(function () {
+            typingMessage.textContent = '';
+        }, 2000); // 2000 milisegundos (2 segundos) en este ejemplo
+    });
+
 </script>
 
 </html>
